# origin

./: AUDIO_FRAMEWORK_ARCHITECTURE.md  CMakeLists.txt  PJM_list.txt  PM_list.txt  README.md  add file.txt  add introduce each file.txt  audio_framework.c  optimization_suggestions.md
FreeRTOS/include/: FreeRTOSConfig.h
app/: FreeRTOS.uvoptx  FreeRTOS.uvprojx  main.c
audio_output/: audio_output.c  audio_output.h
audio_processing/: audio_processing.c  audio_processing.h
examples/: CMakeLists.txt  simple_playback.c
include/: audio_sdk.h  dbus_utils.h  module_interface.h  module_manager.h
kernel/: Kbuild
kernel/core/: module.c
pipewire_modules/: stream_input.c
pipewire_modules/airplay2/: airplay2.c  airplay2.h
pipewire_modules/alsa/: alsa_plugin.c
pipewire_modules/auxin/: auxin.c  auxin.h
pipewire_modules/bluez/: CMakeLists.txt  bluez_audio.c  bluez_audio.h
pipewire_modules/connman/: connman.c  connman.h
pipewire_modules/dft/: CMakeLists.txt  dft.c  dft.h
pipewire_modules/flowdsp/: flowdsp.c  flowdsp.h
pipewire_modules/googlecast/: googlecast.c  googlecast.h
pipewire_modules/hdmi_earc/: hdmi_earc.c  hdmi_earc.h
pipewire_modules/ota_update/: CMakeLists.txt  ota_update.c  ota_update.h
pipewire_modules/playerctl/: playerctl.c
pipewire_modules/qplay/: qplay.c  qplay.h
pipewire_modules/rca/: rca.c  rca.h
pipewire_modules/softap/: softap.c  softap.h
pipewire_modules/spotify_connect/: spotify_connect.c  spotify_connect.h
pipewire_modules/system_log/: CMakeLists.txt  system_log.c  system_log.h
pipewire_modules/tidalconnect/: tidalconnect.c  tidalconnect.h
pipewire_modules/usb_audio/: usb_audio.c  usb_audio.h
pipewire_modules/wac/: wac.c  wac.h
pipewire_modules/wireplumber/: main.lua
pipewire_modules/wpa_supplicant/: wpa_supplicant.c  wpa_supplicant.h
routing/: routing_manager.c  routing_manager.h
src/: audio_sdk.c  dbus_utils.c  module_manager.c
system/I2C/: i2c.c  i2c.h
system/SPI/: spi.c  spi.h  spi_example.c
system/USB/: usb.c  usb.h
system/delay/: delay.c
system/flash/: README.md  flash.c  flash.h  flash_demo.c  flash_demo.h
system/sys/: sys.c  sys.h
system/usart/: README.md  README_DMA.md  uart.c  uart.h  uart_demo.c  uart_demo.h  uart_dma.c  uart_dma.h  uart_dma_demo.c  uart_dma_demo.h  usart.c  usart.h
